Custom channel support, to better facilitate RP that's done in channels.
Support for other chat channels as well, such as guild/officer. More flexibility in that regard, especially so you can see your communicator in the main window.
Removed hiding player name feature. Sorry, this was an obscure, early feature that was only meant to be a workaround.
Removed message highlighting in favor of a single red line. So modern...
Added tabs to the left hand side to mark things. Player text coloring has been removed to favor this (a green tab).
Mouseover highlighting has been turned into mouseover/target highlighting, and instead uses a red tab.
You can now click on messages to mark them, with a yellow tab. This is mainly meant for DMs to better manage which messages they have acknowledged.
Lightened old timestamps in snooper, so you can see them better.
Raid group filters. For example, you can create a window to only listen to groups 3 and 4, who are off exploring a separate trail!~
Removed custom chat colors in preference to default chat colors. If you liked it the other way, sorry!
Name shortener is now toggleable in the options.
URL detector. So you can click on links to copy them.

## 1.5.8
Compatibility update.
Minor fixes.

## 1.5.7
Patch 7.3 compatiblity.

## 1.5.6
Raid target substitution.

## 1.5.5
Fixed a bug with snooper not updating immediately.

## 1.5.4
Bugfix: Fixed bug reported by iodinesky regarding chat filters.
Bugfix: Snooper window better supports color codes.
Bugfix: Removed debug roll message.
Bugfix: Fixed /roll bypassing conditions to make a notification.
Enhancement: Shortened timestamp format by removing brackets.
Optimization: Some snooper window optimizations.

## 1.5.3
Bugfix: Fix option to toggle target emotes beeps. (and added separate option)
Bugfix: Targeting yourself no longer causes a beep.

## 1.5.2
Patch 7.2.5 support.
Added tracking for player rolls.