@@ -36,8 +36,28 @@ local chat_events = {
 local function ChatFilter( self, event, msg, sender, ... )
 	if Main.db.profile.keywords_enable then
 		local found = false
-		msg = msg:gsub( "%S+", function( t )
-			if g_triggers[t:lower()] then
+		
+		--if Ambiguate(sender,"all") == UnitName("player") then return end
+		
+		local replaced = {}
+		
+		msg = msg:gsub( "(|cff[0-9a-f]+|H[^|]+|h[^|]+|h|r)", function( link )
+			table.insert( replaced, link )
+			return "\001\001" .. #replaced .. "\001\001"
+		end)
+		
+		-- we pad with space so that word boundaries at start and end are found.
+		msg = " " .. msg .. " "
+		for trigger, _ in pairs( g_triggers ) do
+			
+			local subs
+			msg, subs = msg:gsub( trigger, function( a,b,c )
+				table.insert( replaced, a .. g_color .. b .. "|r" .. c )
+				return "\001\001" .. #replaced .. "\001\001"
+			end)
+			
+			if subs > 0 then
+				found = true
 				if GetTime() > g_beeptime then
 					-- we have our own cooldown in here because this shit is going to be spammed a lot
 					-- on message matches.
@@ -45,12 +65,15 @@ local function ChatFilter( self, event, msg, sender, ... )
 					PlaySoundFile( SharedMedia:Fetch( "sound", "ListenerPoke" ), "Master" )
 					Main:FlashClient()
 				end
-				
-				return g_color .. t .. "|r"
 			end
-		end)
+		end
 		
-		return false, msg, sender, ...
+		if found then
+			msg = msg:gsub( "\001\001(%d+)\001\001", function( index )
+				return replaced[tonumber(index)]
+			end)
+			return false, msg:sub( 2, msg:len() - 1 ), sender, ...
+		end
 	end
 end
 
@@ -67,21 +90,36 @@ function Main.LoadKeywordsConfig()
 	g_color = "|c" .. GetHexCode( Main.db.profile.keywords_color )
 	g_triggers = {}
 	
-	for word in Main.db.profile.keywords_string:gmatch( "%S+" ) do
-		print( "a", word )
+	local firstname = Main.GetICName( UnitName("player") ):match( "^%s*(%S+)" )
+	local lastname  = Main.GetICName( UnitName("player"), true ):match( "(%S+)%s*$" )
+	local oocname   = UnitName('player')
+	
+	for word in Main.db.profile.keywords_string:gmatch( "[^,]+" ) do
+		word = word:match( "^%s*(.-)%s*$" )
 		word = word:lower()
-		if word == "<firstname>" then
-			word = Main.GetICName( UnitName("player") ):match( "^%s*(%S+)" )
-		elseif word == "<lastname>" then
-			word = Main.GetICName( UnitName("player"), true ):match( "(%S+)%s*$" )
-		elseif word == "<oocname>" then
-			word = UnitName('player')
-		elseif word == "<nicknames>" then
-			-- todo: parse nicknames
-		end
-		print( "b", word )
+		
+		word = word:gsub( "<firstname>", firstname )
+		word = word:gsub( "<lastname>", lastname )
+		word = word:gsub( "<oocname>", oocname )
+		
 		if word then
-			g_triggers[word:lower()] = true
+			-- and now, format the trigger...
+			word = word:lower()
+			
+			if not word:find( "[^%a%d%s]" ) then
+				-- if word doesn't have any special characters, then we
+				-- turn it into a case insensitive pattern, and wrap it
+				-- in word boundaries
+				word = word:gsub( "%a", function(c)
+					return string.format( "[%s%s]", c:lower(), c:upper() )
+				end)
+				-- convert space to patterned space
+				word = word:gsub( "%s+", "%%s+" )
+				word = "([%s%p])(" .. word .. ")([%s%p])"
+			else
+				-- otherwise, they're doing something weird, and let them do it.
+			end
+			g_triggers[word] = true
 		end
 	end
 	DEBUG1 = g_triggers
